old/namespaces/base/flux-system/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: "external"
spec:
  rules:
    - host: "flux-receiver.theredone.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - "flux-receiver.theredone.dev"
